# astro

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: assistant-mcp-contract.md  assistant-workflows.md  backend-installation.md  current-state.md  release-checklist.md  validation-matrix.md
docs/research/: 2026-06-20-verifiable-ai-space-workflows.md  nyx-evaluation.md
docs/validation/: live-backend-campaigns.md
examples/assistant/: od_workflow_prompt.txt
examples/attitude/: closed_loop_pd.yaml  closed_loop_sensor_actuator.yaml  rigid_body_torque.yaml
examples/eop/: finals2000A_excerpt.txt
examples/launch/: pitch_program_two_stage.yaml  rocketpy_configured_multimotor_unsupported.yaml  rocketpy_configured_single_stage.yaml  rocketpy_configured_two_stage.yaml  vertical_two_stage.yaml
examples/measurements/: dsn_tracking_kvn.txt  dsn_tracking_normalized.csv  leo_two_station_od_measurements.csv  leo_two_station_od_measurements.json  leo_two_station_od_measurements.tdm
examples/scenarios/: geo_two_body.yaml  leo_covariance.yaml  leo_doppler.yaml  leo_eccentric_two_body.yaml  leo_finite_burn.yaml  leo_geodetic_eop_table_topocentric.yaml  leo_geodetic_eop_topocentric.yaml  leo_geodetic_precession_nutation_topocentric.yaml  leo_geodetic_topocentric.yaml  leo_j2.yaml  leo_j2_variational_covariance.yaml  leo_jax_high_order_gravity_research.yaml  leo_jax_third_body_ephemeris_research.yaml  leo_jax_third_body_research.yaml  leo_orekit_drag.yaml  leo_orekit_high_fidelity.yaml  leo_orekit_high_fidelity_covariance.yaml  leo_orekit_high_order_gravity.yaml  leo_orekit_srp.yaml  leo_orekit_third_body.yaml  leo_radial_burn.yaml  leo_radiometric_links.yaml  leo_radiometric_media.yaml  leo_radiometric_weather_frequency.yaml  leo_tudat_high_order_gravity.yaml  leo_tudat_variational_covariance.yaml  leo_two_body.yaml  leo_two_station_angles.yaml  leo_two_station_od.yaml  leo_two_station_topocentric.yaml  leo_variational_covariance.yaml  leo_velocity_aligned_burn.yaml  meo_two_body.yaml
examples/trajectories/: leo_initial_state.opm
src/astro_assistant/: __init__.py  capabilities.py  executor.py  models.py  planner.py  policy.py  registry.py  scenarios.py  validators.py  verification.py
src/astro_backends/: import_timeout.py
src/astro_cli/: __init__.py  main.py
src/astro_core/: __init__.py  constants.py  eop.py  errors.py  io.py  models.py
src/astro_dynamics/: __init__.py  attitude.py  backends.py  conjunction.py  ephemeris.py  local.py  maneuvers.py  monte_carlo.py
src/astro_launch/: __init__.py  backends.py  handoff.py  io.py  local.py  models.py  reporting.py  targeting.py
src/astro_od/: __init__.py  calibration.py  dsn.py  estimation.py  io.py  measurements.py
tests/: __init__.py  test_imports.py  test_packaging.py
tests/astro_assistant/: __init__.py  test_capabilities.py  test_executor.py  test_imports.py  test_models.py  test_planner.py  test_policy.py  test_registry.py  test_scenarios.py  test_validators.py  (+1 more)
(+92 files in other folders)
